--- a/index.html
+++ b/index.html
@@ -4,8 +4,31 @@
 		<div class="container">
 			<form>
 				<div class="row-1">
-					<input type="text" placeholder="firstname">
+					<input type="text" placeholder="first name">
+					<input type="text" placeholder="middle initial">
+					<input type="text" placeholder="last name">
 				</div>
+				<div class="row-2">
+					<input type="text" placeholder="address">
+					<input type="text" placeholder="occupation">
+					<input type="text" placeholder="employer">
+				</div>
+				<div class="row-3">
+					<input type="text" placeholder="employer address">
+					<select name="select1">
+						<option value="">
+						<option value="">
+						<option value="">
+						<option value="">
+					</select>
+					<input type="number" placeholder="amount requested">
+				</div>
+				<div class="row-4">
+					<input type="radio" name="radio1">5 years
+					<input type="radio" name="radio1">10 years
+					<input type="radio" name="radio1">15 years
+				</div>
+				<div class
 			</form>
 		</div>
 	</body>
