--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 				<div class="row-3">
 					<input type="text" placeholder="employer address">
 					<select name="select1">
-						<option value="">
-						<option value="">
-						<option value="">
-						<option value="">
+						<option value="Commerical">Commercial</option>
+						<option value="Real Estate">Real Estate</option>
+						<option value="Personal">Personal</option>
+						<option value="Mortgage">Mortgage</option>
 					</select>
 					<input type="number" placeholder="amount requested">
 				</div>
@@ -28,7 +28,20 @@
 					<input type="radio" name="radio1">10 years
 					<input type="radio" name="radio1">15 years
 				</div>
-				<div class
+				<div class="row-5">
+					<input type="checkbox" name="checkbox1">I have a down payment
+					<input type="checkbox" name="checkbox1">Out-of-state resident
+					<input type="checkbox" name="checkbox1">Married
+					<input type="checkbox" name="checkbox1">Loan will be co-signed
+				</div>
+				<div class="row-5">
+					<input type="text" name="message" placeholder="Message">
+				</div>
+				<div class="row-6">
+					<input type="email" name="email" placeholder="email">
+					<input type="tel" name="telephone" placeholder="telephone number">
+					<input type="text" placeholder="linked in">
+				</div>
 			</form>
 		</div>
 	</body>
