adding main.css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
+<!DOCTYPE html>
 <html>
-	<head></head>
+	<head>
+		<title>Bank Form</title>
+		<link rel="stylesheet" type="text/css" href="main.css">
+	</head>
 	<body>
 		<div class="container">
 			<form>
