--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<div class="row-3">
 					<input type="text" placeholder="employer address">
 					<select name="select1">
+						<option value="default">Type of Loan</option>
 						<option value="Commerical">Commercial</option>
 						<option value="Real Estate">Real Estate</option>
 						<option value="Personal">Personal</option>
@@ -39,12 +40,15 @@
 					<input type="checkbox" name="checkbox1">Loan will be co-signed
 				</div>
 				<div class="row-5">
-					<input type="text" name="message" placeholder="Message">
+					<input type="text" name="message" placeholder="Message" id="message">
 				</div>
 				<div class="row-6">
 					<input type="email" name="email" placeholder="email">
 					<input type="tel" name="telephone" placeholder="telephone number">
 					<input type="text" placeholder="linked in">
+				</div>
+				<div class="submit">
+					<button name="submit">Submit</button>
 				</div>
 			</form>
 		</div>
