updating html css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<div class="container">
+			<h1>Banking Form</h1>
 			<form>
 				<div class="row-1">
 					<input type="text" placeholder="first name">
@@ -40,7 +41,7 @@
 					<input type="checkbox" name="checkbox1">Loan will be co-signed
 				</div>
 				<div class="row-5">
-					<input type="text" name="message" placeholder="Message" id="message">
+					<textarea type="text" name="message" placeholder="Message" id="message"></textarea>
 				</div>
 				<div class="row-6">
 					<input type="email" name="email" placeholder="email">
